Fixed: Size of Read More/Less when on mobile screen

--- a/style.css
+++ b/style.css
@@ -27,13 +27,18 @@ body {
 	display: flex;
 	flex-direction: column;
 	margin: 1em auto;
-	padding: 2em;
+	padding: 1em 2em;
 	background-color: #262640;
 	border-radius: 4px;
 	box-shadow: 0 0 3px 1px rgba(0,0,0,0.6);
 }
 
+.article {
+	margin: 1.5em 0;
+}
+
 .article > .article-title {
+
 	margin-bottom: 0.6em;
 	font-size: 23px;
 	border-bottom: 4px solid #941010;
@@ -49,12 +54,10 @@ body {
 	font-weight: bolder;
 	color: #941010;
 	margin-top: 4px;
-	transition: all ease-in 100ms;
 }
 
 .article > .read-more-less:hover {
 	cursor: pointer;
-	font-size: 18px;
 }
 
 .hide {
@@ -75,6 +78,10 @@ body {
 	}
 
 	.article > .content {
+		font-size: 14px;
+	}
+
+	.article > .read-more-less {
 		font-size: 14px;
 	}
 }
